--- a/templates/home_backup.html
+++ b/templates/home_backup.html
@@ -145,7 +145,7 @@
             <a href="{% url 'choose-mode' %}">Features</a>
             <a href="#timelytips">Momentum</a>
             <a href="{% url 'login' %}">Login</a>
-            <a href="#" class="cta-button">Get Started</a>
+            <a href="{% url 'quickstart:start' %}" class="cta-button">Get Started</a>
         </div>
     </nav>
     
@@ -154,7 +154,7 @@
         <div class="hero-content">
             <h1>Sync Your Life,<br>Master Your Tasks</h1>
             <p>Experience the power of organized living with Synclist – your intelligent task management solution. Join thousands of users who have transformed their productivity.</p>
-            <a href="#" class="cta-button">Start Free Trial</a>
+            <a href="{% url 'quickstart:start' %}" class="cta-button">Start Free Trial</a>
         </div>
         <div class="hero-image">
             <img src="{% static 'images/Screenshot 2025-02-14 101958.png' %}" alt="Synclist App Preview">
